--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css2?family=Geologica:wght@100;200;300;400;500;600;700;800;900&display=swap';
+@import '../src/fonts.css';
 
 * {
     margin: 0;
@@ -91,20 +91,30 @@ main {
 
     section {
         height: 100%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         position: relative;
+        overflow: hidden;
 
         h2 {
             font-size: 16rem;
             line-height: 16rem;
-            opacity: 0.1;
-
+            opacity: 0;
+            width: 100%;
             position: absolute;
-            top: 0;
             left: 0;
+            top: 0;
+
+            transition: opacity 0.6s;
+        }
+
+        &.active {
+            h2 {
+                opacity: 0.1;
+            }
         }
 
         .content {
@@ -160,6 +170,76 @@ main {
 
                     a:hover {
                         opacity: 1;
+                    }
+                }
+
+                .skills-list {
+                    display: grid;
+                    grid-template-columns: repeat(9, 1fr);
+                    margin-bottom: 2rem;
+                    max-width: 28rem;
+                    gap: 1rem;
+
+                    li {
+                        grid-column: span 3;
+                        padding: 0.5rem 1rem;
+                        border: 1px solid var(--charcoal);
+                        color: var(--charcoal);
+                        border-radius: 0.2rem;
+                        text-align: center;
+
+                        &.black {
+                            background-color: var(--charcoal);
+                            border: 1px solid var(--charcoal);
+                            color: var(--offwhite);
+                        }
+
+                        &.white {
+                            background-color: var(--offwhite);
+                            border: 1px solid var(--offwhite);
+                            color: var(--charcoal);
+                        }
+
+                        &.s {
+                            grid-column: span 1;
+                        }
+
+                        &.m {
+                            grid-column: span 2;
+                        }
+
+                        &.xl {
+                            grid-column: span 4;
+                        }
+                        &.xxl {
+                            grid-column: span 5;
+                        }
+                    }
+                }
+
+                .work-grid {
+                    display: grid;
+                    grid-template-columns: repeat(10, 1fr);
+                    margin-bottom: 2rem;
+
+                    li {
+                        padding: 0.5rem 1rem;
+                        color: var(--charcoal);
+                        border-bottom: 1px solid var(--offwhite);
+                        text-align: left;
+                        &.comp {
+                            grid-column: span 6;
+                        }
+                        &.year {
+                            grid-column: span 4;
+                            text-align: right;
+                        }
+                        &.description {
+                            grid-column: span 10;
+                            border-bottom: 1px solid var(--charcoal);
+                            margin-bottom: 1rem;
+                            font-weight: 800;
+                        }
                     }
                 }
             }
