--- a/src/style.scss
+++ b/src/style.scss
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+html {
+    font-size: 16px;
+}
+
 :root {
     --charcoal: #1a1818;
     --offwhite: #ece3e1;
@@ -99,21 +103,26 @@ main {
         position: relative;
         overflow: hidden;
 
-        h2 {
-            font-size: 16rem;
-            line-height: 16rem;
+        .back {
             opacity: 0;
             width: 100%;
+            height: 100%;
             position: absolute;
             left: 0;
             top: 0;
+            transform: scale(0);
 
-            transition: opacity 0.6s;
+            background-position: top;
+            background-repeat: no-repeat;
+            background-size: contain;
+
+            transition: opacity 0.6s, transform 0.6s;
         }
 
         &.active {
-            h2 {
-                opacity: 0.1;
+            .back {
+                opacity: 1;
+                transform: scale(1);
             }
         }
 
@@ -132,48 +141,6 @@ main {
                 backdrop-filter: blur(10px);
                 overflow: hidden;
 
-                &.project {
-                    max-width: 30rem;
-
-                    .logo {
-                        width: 2rem;
-                        height: 2rem;
-                        overflow: hidden;
-                        border-radius: 0.2rem;
-
-                        background-image: var(--url);
-                        background-position: center;
-                        background-repeat: no-repeat;
-                        background-size: contain;
-                    }
-
-                    h3 {
-                        display: flex;
-                        align-items: center;
-                        gap: 1rem;
-                    }
-                    h3,
-                    p {
-                        margin-bottom: 0.4rem;
-                    }
-
-                    .link {
-                        display: inline-block;
-                        width: 2rem;
-                        height: 2rem;
-                        opacity: 0.6;
-                        transition: opacity 0.4s;
-
-                        background-image: url('/files/img/link.svg');
-                        background-position: center;
-                        background-repeat: no-repeat;
-                        background-size: contain;
-                        &:hover {
-                            opacity: 1;
-                        }
-                    }
-                }
-
                 h3 {
                     margin-bottom: 1rem;
                     font-weight: 800;
@@ -186,15 +153,6 @@ main {
                         content: '◈';
                         margin-right: 0.2rem;
                     }
-                }
-
-                .role {
-                    font-weight: 800;
-                }
-
-                .status {
-                    font-weight: 600;
-                    text-decoration: underline;
                 }
 
                 .image {
@@ -304,7 +262,172 @@ main {
                 padding: 0;
                 backdrop-filter: blur(0);
             }
+
+            .projects {
+                max-width: 60rem;
+                min-width: 40vw;
+                z-index: 2;
+
+                &__icons-list {
+                    display: flex;
+                    align-items: center;
+                    gap: 0.5rem;
+                    margin-bottom: 2rem;
+                }
+
+                .logo {
+                    width: 3rem;
+                    height: 3rem;
+                    overflow: hidden;
+                    border-radius: 0.4rem;
+
+                    background-image: var(--url);
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    opacity: 0.5;
+                    transition: opacity 0.4s;
+                }
+
+                .logo:hover {
+                    opacity: 1;
+                }
+
+                .logo.active {
+                    opacity: 1;
+                }
+
+                &__blocks-list {
+                    height: 18rem;
+                    position: relative;
+                }
+
+                &__block {
+                    position: absolute;
+                    padding: 0.5rem;
+                    border-radius: 0.4rem;
+                    height: 100%;
+                    backdrop-filter: blur(10px);
+                    overflow: hidden;
+                    display: none;
+                    z-index: 1;
+                }
+
+                &__block.active {
+                    z-index: 2;
+                    display: block;
+                    animation: 0.6s project-anim forwards;
+                }
+
+                &__block.deactive {
+                    z-index: 2;
+                    display: block;
+                    animation: 0.6s project-anim-deactive forwards;
+                }
+
+                @keyframes project-anim-deactive {
+                    0% {
+                        display: block;
+                        transform: translate(0, 0);
+                    }
+                    99% {
+                        display: block;
+                        transform: translate(100vw, 0);
+                    }
+                    100% {
+                        display: none;
+                        transform: translate(100vw, 0);
+                    }
+                }
+
+                @keyframes project-anim {
+                    0% {
+                        display: none;
+                        transform: translate(-100vw, 0);
+                    }
+                    1% {
+                        display: block;
+                        transform: translate(-100vw, 0);
+                    }
+                    100% {
+                        display: block;
+                        transform: translate(0, 0);
+                    }
+                }
+
+                .header {
+                    display: flex;
+                    align-items: center;
+                    gap: 1rem;
+                    h3 {
+                        background-color: var(--charcoal);
+                        border: 1px solid var(--charcoal);
+                        color: var(--offwhite);
+                        padding: 0.5rem 1rem;
+                        border-radius: 0.4rem;
+                    }
+                }
+                .header,
+                p {
+                    margin-bottom: 0.4rem;
+                }
+
+                .role {
+                    font-weight: 800;
+
+                    background-color: var(--offwhite);
+                    border: 1px solid var(--offwhite);
+                    color: var(--charcoal);
+                    padding: 0.5rem 1rem;
+                    border-radius: 0.4rem;
+                }
+
+                .description {
+                    background-color: var(--offwhite);
+                    border: 1px solid var(--offwhite);
+                    color: var(--charcoal);
+                    padding: 0.5rem 1rem;
+                    border-radius: 0.4rem;
+                }
+
+                .status {
+                    font-weight: 600;
+                    text-decoration: underline;
+                }
+
+                .link {
+                    display: inline-block;
+                    width: 2rem;
+                    height: 2rem;
+                    opacity: 0.6;
+                    transition: opacity 0.4s;
+
+                    background-image: url('/files/img/link.svg');
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: contain;
+                    &:hover {
+                        opacity: 1;
+                    }
+                }
+            }
         }
+    }
+
+    #about .back {
+        background-image: url('/files/img/backs/about-back.svg');
+    }
+
+    #skills .back {
+        background-image: url('/files/img/backs/skills-back.svg');
+    }
+
+    #exp .back {
+        background-image: url('/files/img/backs/exp-back.svg');
+    }
+
+    #projects .back {
+        background-image: url('/files/img/backs/projects-back.svg');
     }
 }
 
@@ -312,4 +435,45 @@ footer {
     writing-mode: vertical-rl;
     transform: rotate(180deg);
     padding: 0.5rem;
+}
+
+@media (width < 500px) {
+    html {
+        font-size: 12px;
+    }
+
+    main section .content {
+        .projects {
+            min-width: 20rem;
+        }
+
+        .projects__block {
+            backdrop-filter: blur(4px);
+        }
+        .content__part {
+            backdrop-filter: blur(4px);
+            flex-grow: 1;
+
+            .work-grid,
+            .skills-list {
+                width: 100%;
+                max-width: 100%;
+            }
+        }
+
+        .content__part:has(.image) {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
+
+@media (height < 700px) {
+    main section .content {
+        &:not(:has(.projects)) {
+            align-content: flex-end;
+            padding-bottom: 1rem;
+        }
+    }
 }
