--- a/pug/index.pug
+++ b/pug/index.pug
@@ -14,7 +14,7 @@ html(lang="ru")
     meta(name="twitter:title", content="Портфолио Веб-Разработчика Федоричев Лев Александрович")
     meta(name="twitter:description", content="Портфолио веб-разработчика Федоричева Льва Александровича, включающее проекты, навыки и контактную информацию.")
     meta(name="twitter:image", content="image_link.jpg")
-    link(async rel="stylesheet", href="/out/style.css")
+    link(async rel="stylesheet", href="out/style.css")
   body
     header
       nav
@@ -171,4 +171,4 @@ html(lang="ru")
                   p Сайт команды разработки GasuDev.
     footer
       p © 2024 FollowTheOwlets
-    script(async src="/out/index.js") 
+    script(async src="out/index.js") 
