--- a/pug/index.pug
+++ b/pug/index.pug
@@ -14,7 +14,7 @@ html(lang="ru")
     meta(name="twitter:title", content="Портфолио Веб-Разработчика Федоричев Лев Александрович")
     meta(name="twitter:description", content="Портфолио веб-разработчика Федоричева Льва Александровича, включающее проекты, навыки и контактную информацию.")
     meta(name="twitter:image", content="image_link.jpg")
-    link(async rel="stylesheet", href="out/style.css")
+    link(async rel="stylesheet", href="./out/style.css")
   body
     header
       nav
@@ -40,12 +40,12 @@ html(lang="ru")
             p.list Основал и руковожу командой разработки GasuDev
             p.list Поддерживаю проекты в сфере образования и стартап Инношкола
             .links
-              a.link-circle(aria-label="Github" href= "https://github.com/FollowTheOwlets" style="--url: url('/files/img/links/github.svg');")
-              a.link-circle(aria-label="GasuDev" href= "https://dev.spbgasu.ru" style="--url: url('/files/img/links/gasudev.svg');")
-              a.link-circle(aria-label="Инношкола" href= "https://ит.инношкола.рф" style="--url: url('/files/img/links/innoshkola.svg');")
-              a.link-circle(aria-label="Telegram" href= "https://t.me/teamlead_gasu" style="--url: url('/files/img/links/telegram.svg');")
+              a.link-circle(aria-label="Github" href= "https://github.com/FollowTheOwlets" style="--url: url('./files/img/links/github.svg');")
+              a.link-circle(aria-label="GasuDev" href= "https://dev.spbgasu.ru" style="--url: url('./files/img/links/gasudev.svg');")
+              a.link-circle(aria-label="Инношкола" href= "https://ит.инношкола.рф" style="--url: url('./files/img/links/innoshkola.svg');")
+              a.link-circle(aria-label="Telegram" href= "https://t.me/teamlead_gasu" style="--url: url('./files/img/links/telegram.svg');")
           .content__part
-            .image(style="--url: url('/files/img/about.webp');")
+            .image(style="--url: url('./files/img/about.webp');")
       section#skills
         .back
         .content
@@ -109,13 +109,13 @@ html(lang="ru")
         .content 
           .projects 
             .projects__icons-list
-              .logo.active(style="--url: url('/files/img/logos/gasubuild.png');" data-active='gasubuild') 
-              .logo(style="--url: url('/files/img/logos/aisbpek.svg');" data-active='aisbpek')  
-              .logo(style="--url: url('/files/img/logos/gasu-app.png');" data-active='gasu-app')
-              .logo(style="--url: url('/files/img/logos/doc-service.svg');" data-active='doc-service') 
-              .logo(style="--url: url('/files/img/logos/kidhub.svg');" data-active='kidhub')  
-              .logo(style="--url: url('/files/img/logos/codespace.svg');" data-active='codespace')  
-              .logo(style="--url: url('/files/img/logos/gasudev.svg');" data-active='gasudev')  
+              .logo.active(style="--url: url('./files/img/logos/gasubuild.png');" data-active='gasubuild') 
+              .logo(style="--url: url('./files/img/logos/aisbpek.svg');" data-active='aisbpek')  
+              .logo(style="--url: url('./files/img/logos/gasu-app.png');" data-active='gasu-app')
+              .logo(style="--url: url('./files/img/logos/doc-service.svg');" data-active='doc-service') 
+              .logo(style="--url: url('./files/img/logos/kidhub.svg');" data-active='kidhub')  
+              .logo(style="--url: url('./files/img/logos/codespace.svg');" data-active='codespace')  
+              .logo(style="--url: url('./files/img/logos/gasudev.svg');" data-active='gasudev')  
             .projects__blocks-list 
               .projects__block.gasubuild.active
                 .header 
@@ -171,4 +171,4 @@ html(lang="ru")
                   p Сайт команды разработки GasuDev.
     footer
       p © 2024 FollowTheOwlets
-    script(async src="out/index.js") 
+    script(async src="./out/index.js") 
