--- a/src/style.scss
+++ b/src/style.scss
@@ -415,19 +415,19 @@ main {
     }
 
     #about .back {
-        background-image: url('/files/img/backs/about-back.svg');
+        background-image: url('../files/img/backs/about-back.svg');
     }
 
     #skills .back {
-        background-image: url('/files/img/backs/skills-back.svg');
+        background-image: url('../files/img/backs/skills-back.svg');
     }
 
     #exp .back {
-        background-image: url('/files/img/backs/exp-back.svg');
+        background-image: url('../files/img/backs/exp-back.svg');
     }
 
     #projects .back {
-        background-image: url('/files/img/backs/projects-back.svg');
+        background-image: url('../files/img/backs/projects-back.svg');
     }
 }
 
