--- a/src/style.scss
+++ b/src/style.scss
@@ -402,7 +402,7 @@ main {
                     opacity: 0.6;
                     transition: opacity 0.4s;
 
-                    background-image: url('/./files/img/link.svg');
+                    background-image: url('../files/img/link.svg');
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: contain;
