--- a/pug/index.pug
+++ b/pug/index.pug
@@ -171,4 +171,4 @@ html(lang="ru")
                   p Сайт команды разработки GasuDev.
     footer
       p © 2024 FollowTheOwlets
-    script(async src="./out/index.js") 
+    script(src="./out/index.js") 
