--- a/src/style.scss
+++ b/src/style.scss
@@ -250,6 +250,13 @@ main {
                             margin-bottom: 1rem;
                             font-weight: 800;
                         }
+
+                        .part {
+                            padding-left: 0.5rem;
+                            text-align: right;
+                            font-family: 'Geologica';
+                            font-weight: 200;
+                        }
                     }
                 }
             }
