--- a/pug/index.pug
+++ b/pug/index.pug
@@ -89,7 +89,7 @@ html(lang="ru")
           .content__part
             ul.work-grid
               li.comp СПБГАСУ УИТ
-              li.year 1 года
+              li.year 1 год
               li.description Веб разработчик
               li.comp GasuDev
               li.year 3 года
