--- a/pug/index.pug
+++ b/pug/index.pug
@@ -43,8 +43,7 @@ html(lang="ru")
             .links
               a.link-circle(aria-label="Github" href= "https://github.com/FollowTheOwlets" style="--url: url('../files/img/links/github.svg');")
               a.link-circle(aria-label="GasuDev" href= "https://dev.spbgasu.ru" style="--url: url('../files/img/links/gasudev.svg');")
-              a.link-circle(aria-label="Инношкола" href= "https://ит.инношкола.рф" style="--url: url('../files/img/links/innoshkola.svg');")
-              a.link-circle(aria-label="Telegram" href= "https://t.me/teamlead_gasu" style="--url: url('../files/img/links/telegram.svg');")
+              a.link-circle(aria-label="Telegram" href= "https://t.me/fedorichev_o" style="--url: url('../files/img/links/telegram.svg');")
           .content__part
             .image(style="--url: url('../files/img/about.webp');")
       section#skills
@@ -102,16 +101,16 @@ html(lang="ru")
               li.comp IT School CodeSpace
               li.year 2 года
               li.description TechLead
-              li.comp СберБанк
-              li.year 1 год
-              li.description Senior Java Developer
+              li.comp RolfTech
+              li.year По н.в.
+              li.description BackLead Developer
           .content__part
             h3 Решенные задачи
             p.list
               | Со своей командой разработал LMS
               br
               | и сервис видеоконференций KidsChat
-            p.list Внедрил Detect во все сервисы команды
+            p.list Разработал и защитил проект инфраструктуры оркестрации SaaS Flora в RolfTech
             p.list Создал IT отдел студенческой активной разработки в СПБГАСУ
             p.list
               | Совместно с разработкой сервиса выпуска сертификатов
@@ -124,13 +123,13 @@ html(lang="ru")
         .content 
           .projects 
             .projects__icons-list
-              .logo(style="background-color:white;--url: url('../files/img/logos/vector.png');" data-active='vector')
-              .logo.active(style="--url: url('../files/img/logos/gasubuild.png');" data-active='gasubuild')
+              .logo.active(style="background-color:white;--url: url('../files/img/logos/rolf.png');" data-active='rolf')
+              .logo(style="--url: url('../files/img/logos/gasubuild.png');" data-active='gasubuild')
               .logo(style="--url: url('../files/img/logos/gasu-app.png');" data-active='gasu-app')
               .logo(style="--url: url('../files/img/logos/doc-service.svg');" data-active='doc-service')
               .logo(style="--url: url('../files/img/logos/kidhub.svg');" data-active='kidhub')
             .projects__blocks-list
-              .projects__block.gasubuild.active
+              .projects__block.gasubuild
                 .header 
                   h3 GasuBuild
                   a.link( target="_blank" aria-label="SmallBuild" href= "https://gasu.neocities.org")
@@ -159,13 +158,13 @@ html(lang="ru")
                 .description 
                   p.status Релиз
                   p Мобильное приложение университета, включающее интеграции с LMS Moodle и 1C сервисами университета.
-              .projects__block.vector
+              .projects__block.rolf.active
                 .header
-                  h3 Sber
-                p.role Senior Developer
+                  h3 RolfTech
+                p.role BackLead Developer
                 .description
-                  p.status Развитие существующего проекта
-                  p Продукт оценивающий деловую репутацию физических и юридических лиц.
+                  p.status Разработка оркестратора и лидерство над другими разработчиками
+                  p SaaS платформа для продажи автомобилей
     footer
       p © 2024 FollowTheOwlets
     script(src="./out/index.js") 
